--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="png" href="icon_transparent-removebg-preview.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+
     <title>Prestação - HMB</title>
   </head>
   <body>
